[gd_scene load_steps=10 format=3 uid="uid://b62qdadmuus8v"]

[ext_resource type="FontFile" uid="uid://dge5wjg2amk7h" path="res://Assets/zhnayuk.ttf" id="1_b5u0c"]
[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_udsuj"]
[ext_resource type="FontFile" uid="uid://brg4pirco4o4j" path="res://Assets/determination.ttf" id="1_xaf41"]
[ext_resource type="PackedScene" uid="uid://8hajeynpsa3s" path="res://Scenes/parallax_background2.tscn" id="4_o1pq8"]
[ext_resource type="AudioStream" uid="uid://cw2h1wdi6i6c8" path="res://Assets/Start_Menu.wav" id="5_vhdka"]
[ext_resource type="AudioStream" uid="uid://73ak46idmhyh" path="res://Assets/Transicion_efecto.wav" id="6_28fdh"]

[sub_resource type="Animation" id="Animation_4r4os"]
resource_name = "fade_in"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transicion/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.30415),
"transitions": PackedFloat32Array(1.5, 0.00195311),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transicion/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.30145),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7g4kc"]
resource_name = "fade_out"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transicion/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.69),
"transitions": PackedFloat32Array(1, 1.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transicion/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s71px"]
_data = {
"fade_in": SubResource("Animation_4r4os"),
"fade_out": SubResource("Animation_7g4kc")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_udsuj")

[node name="VBoxMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -97.0
offset_right = 135.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="El gato" type="Button" parent="VBoxMenu"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_b5u0c")
theme_override_font_sizes/font_size = 30
text = "el gato"
flat = true

[node name="Gato" type="AudioStreamPlayer2D" parent="VBoxMenu/El gato"]

[node name="VBoxBotones" type="VBoxContainer" parent="VBoxMenu"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="PVP" type="Button" parent="VBoxMenu/VBoxBotones"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.945098, 0.0941176, 1)
theme_override_fonts/font = ExtResource("1_xaf41")
theme_override_font_sizes/font_size = 22
text = "PVP"
flat = true

[node name="PVE" type="Button" parent="VBoxMenu/VBoxBotones"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.945098, 0, 1)
theme_override_fonts/font = ExtResource("1_xaf41")
theme_override_font_sizes/font_size = 22
text = "PVE"
flat = true

[node name="Salir" type="Button" parent="VBoxMenu/VBoxBotones"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.945098, 0, 1)
theme_override_fonts/font = ExtResource("1_xaf41")
theme_override_font_sizes/font_size = 22
text = "SALIR
"
flat = true

[node name="ParallaxBackground" parent="." instance=ExtResource("4_o1pq8")]

[node name="Start_Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vhdka")
autoplay = true

[node name="Transicion" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s71px")
}

[node name="ColorRect" type="ColorRect" parent="Transicion"]
visible = false
self_modulate = Color(1, 1, 1, 0)
offset_right = 720.0
offset_bottom = 360.0

[node name="Audio_T" type="AudioStreamPlayer" parent="Transicion"]
stream = ExtResource("6_28fdh")

[connection signal="pressed" from="VBoxMenu/El gato" to="." method="_on_el_gato_pressed"]
[connection signal="pressed" from="VBoxMenu/VBoxBotones/PVP" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="VBoxMenu/VBoxBotones/PVE" to="." method="_on_pve_pressed"]
[connection signal="pressed" from="VBoxMenu/VBoxBotones/Salir" to="." method="_on_salir_pressed"]
[connection signal="animation_finished" from="Transicion" to="." method="_on_transicion_animation_finished"]
